Fix h2 page breaks on print

--- a/sass/custom/_print.scss
+++ b/sass/custom/_print.scss
@@ -11,7 +11,9 @@
     padding-top: 15px;
   }
 
-  h2 { page-break-after : avoid }
+  h2+p{
+    page-break-before: avoid;
+  }
 
   //.heading, .serif { font-family: "Baskerville"; }
   a:link { text-decoration: none; color: #000; }
